cluster/manifests/kube-crud-server/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-crud-server
  labels:
    name: kube-crud-server
    pod-security.kubernetes.io/enforce: restricted
