cluster/manifests/kube-crud-server/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: kube-crud-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-crud-server
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
